Include tag summary in the api schema
